<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/textview_padding"
        android:text="@string/price_pack"
        android:textColor="@color/holo_blue"
        android:textSize="@dimen/wizard_textsize" />

    <TextView
        android:id="@+id/contentTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/textview_padding"
        android:text="@string/enter_price_pack"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/currencyTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/dollar_sign"
            android:textColor="@color/holo_blue"
            android:textSize="@dimen/wizard_textsize" />

        <NumberPicker
            android:id="@+id/dollarNumberPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/textview_padding" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/decimal_point"
            android:textColor="@color/holo_blue"
            android:textSize="@dimen/wizard_textsize" />

        <NumberPicker
            android:id="@+id/centsNumberPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/textview_padding" />
    </LinearLayout>

</LinearLayout>