<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="@dimen/textview_padding"
            android:text="@string/show_data_for"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/dateSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:entries="@array/smokinghistory_selections" />
    </LinearLayout>

    <TextView
        android:id="@+id/dateTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/textview_padding"
        android:paddingRight="@dimen/textview_padding"
        android:paddingTop="@dimen/textview_padding"
        android:text="@string/smokinghistory_placeholder"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/holo_red_light" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/targetTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/textview_padding"
            android:text="@string/target_data"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/holo_blue_dark"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/smokedTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/textview_padding"
            android:text="@string/smoked_data"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/holo_orange_light"
            android:textStyle="bold" />

    </LinearLayout>

    <com.github.johnpersano.breathe.graphs.LineGraph
        android:id="@+id/linegraph"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/linegraph_margin" />

</LinearLayout>