<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/textview_padding"
        android:background="@drawable/card_background_white"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:padding="@dimen/textview_padding"
                android:text="@string/daily_smoked"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/dailysmokedTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:gravity="right"
                android:padding="@dimen/textview_padding"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/holo_orange_dark" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:padding="@dimen/textview_padding"
                android:text="@string/price_pack"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/priceperpackTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:gravity="right"
                android:padding="@dimen/textview_padding"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/holo_red_light" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:padding="@dimen/textview_padding"
                android:text="@string/cigarettes_in_pack"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/cigarettesperpackTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:gravity="right"
                android:padding="@dimen/textview_padding"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/holo_purple" />
        </LinearLayout>
    </LinearLayout>
